# DualOscOS

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
.github/workflows/: pluginbuild.yml
plugins/DualOscOS/: CMakeLists.txt  DualOscOS.cpp  DualOscOS.hpp  DualOscOS.sc  DualOscOS.schelp  Utils.hpp
plugins/DualOscOS/Classes/: DualOscOS.sc
plugins/DualOscOS/HelpSource/: DualOscOS.schelp  SingleOscOS.schelp  SuperSawOS.schelp
plugins/Utils/: Utils.hpp
